css/queries.css
/**************************/
/* BELOW 908px (Tablets) */
/**************************/

/* @media (max-width: 48em) { */
@media (max-width: 56.75em) {
  header .nav-list {
    display: none;
  }

  .btn-mobile-nav {
    display: block;
  }

  .hero {
    padding: 0 4rem;
  }

  .projects-section {
    grid-template-columns: 1fr;
    gap: 2.4rem;
    padding: 4rem;
  }

  .project-title {
    font-size: 2.2rem;
  }
  .project-text {
    font-size: 1.4rem;
  }

  .container {
    max-width: 51.5rem;
    padding: 0 4rem;
  }

  .brands-section .logos-list {
    grid-template-columns: repeat(3, 1fr);
  }

  .agencies-section .logos-list {
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    gap: 4.7rem;
  }

  .secondary-heading {
    text-align: center;
  }
  /*  */
  .panel-section {
    height: 90rem;
  }

  .panel-content {
    flex-direction: column;
    gap: 5.5rem;
  }

  .panel-title {
    text-align: center;
    margin-bottom: 3.2rem;
  }

  .panel-subtitle {
    text-align: center;
    margin-bottom: 5.7rem;
  }

  .panel-buttons {
    flex-direction: column;
    gap: 1.6rem;
  }

  /*  */

  .footer-nav {
    margin-bottom: 8rem;
  }

  .nav-list {
    gap: 2.2rem;
  }

  /* MOBILE NAVIGATION */
  .btn-mobile-nav {
    display: block;
    z-index: 9999;
  }

  .header-nav {
    /* background-color: rgba(255, 255, 255, 0.9); */
    background-color: rgb(37, 60, 108, 0.9);
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(10px);
    position: absolute;
    inset: 0;
    height: 100vh;
    transform: translateX(100%);

    display: flex;
    align-items: center;
    justify-content: center;
    /* transition: all 0.3s ease-in; */

    /* 1) Hide it visually */
    opacity: 0;
    pointer-events: none;
    visibility: hidden;
  }

  .nav-open .header-nav {
    opacity: 1;
    pointer-events: auto;
    visibility: visible;
    transform: translateX(0);
  }

  .nav-open .icon-mobile-nav[name="close-outline"] {
    display: block;
  }

  .nav-open .icon-mobile-nav[name="menu-outline"] {
    display: none;
  }

  .header-nav-list {
    flex-direction: column;
    gap: 4.8rem;
  }

  .header-nav-list .nav-link:link,
  .header-nav-list .nav-link:visited {
    font-weight: 500;
    font-size: 2.3rem;
  }
}

/**************************/
/* BELOW 544px (Phones) */
/**************************/

@media (max-width: 34em) {
  .primary-heading {
    font-size: 4rem;
    margin-bottom: 3.6rem;
  }

  .hero {
    padding: 0 2.4rem;
  }

  .projects-section {
    padding: 2.4rem;
  }

  .container {
    padding: 0 2.4rem;
  }

  .brands-section {
    height: 75rem;
    /* padding: 0 2.4rem; */
  }

  .brands-section .logos-list {
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
  }

  .agencies-section {
    height: 75rem;
  }

  .agencies-section .logos-list {
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    gap: 4.7rem;
  }

  /*  */
  .footer-section {
    background-color: #0a1a3d;
    padding-top: 9.4rem;
    padding-bottom: 4.2rem;
  }

  .footer-nav {
    flex-direction: column;
    gap: 4.65rem;

    margin-bottom: 8rem;
  }

  .copyright-box {
    flex-direction: column-reverse;
    gap: 4.4rem;
  }
}

